--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,6 @@
-// Fonts
-//@import url('https://fonts.googleapis.com/css?family=Nunito');
-
-// Variables
-@import 'variables';
-
-// Bootstrap
-// @import '~bootstrap/scss/bootstrap';
+@import "global";
+@import '~@fullcalendar/core/main.css';
+@import '~@fullcalendar/daygrid/main.css';
+@import '~@fullcalendar/timegrid/main.css';
+@import '~@fullcalendar/timeline/main.css';
+@import '~@fullcalendar/resource-timeline/main.css';
